welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: Invalid literal number
for (compteur <-1to pas) {
                ^Program:11: error: ')' expected but '}' found.
	}
        ^